# flaskTemplate

./: .env_example  .flaskenv  .gitignore  .pre-commit-config.yaml  freeze.py  main.py  pyproject.toml  readme.md  requirements.txt
config/: default.py
instance/: config.py
server/: __init__.py  controllers.py  flask_log_handlers.py  routes.py
server/static/: custom.css
server/templates/: base.html  bokeh.html  index.html  options.html  test.html
